<resources>
    <string name="app_name">Navigation View</string>
    <string name="action_settings">Settings</string>

    <string name="blue">Blue</string>
    <string name="light_green">Light Green</string>
    <string name="indigo">Indigo</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="cyan">Cyan</string>
    <string name="light_blue">Light Blue</string>
    <string name="green">Green</string>
    <string name="lime">Lime</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
